kubernetes/ingress/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: i27-helpdesk-ui
  namespace: i27-helpdesk-dev

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # Join the SAME ALB already used by Gateway.
    alb.ingress.kubernetes.io/group.name: i27-helpdesk-public

    # Gateway uses order 10.
    # UI catch-all must be evaluated afterward.
    alb.ingress.kubernetes.io/group.order: "20"

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: "200"

    alb.ingress.kubernetes.io/tags: Project=i27-helpdesk,Environment=dev

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: i27-helpdesk-ui
                port:
                  number: 80
